log
ju., 17 de abr. de 2025 16:26:40: 
 tests:  0|6
total_score: 0/70
eeef3b7
ju., 17 de abr. de 2025 16:56:19: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
0e1e404
ju., 17 de abr. de 2025 19:36:05: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c:88:11: error: redefinition of 'createMap'
 HashMap * createMap(long capacity) {
           ^~~~~~~~~
hashmap.c:41:11: note: previous definition of 'createMap' was here
 HashMap * createMap(long capacity){
           ^~~~~~~~~
a791cef
ju., 17 de abr. de 2025 19:37:39: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c:88:11: error: redefinition of 'createMap'
 HashMap * createMap(long capacity) {
           ^~~~~~~~~
hashmap.c:41:11: note: previous definition of 'createMap' was here
 HashMap * createMap(long capacity){
           ^~~~~~~~~
2c4dc86
ju., 17 de abr. de 2025 19:45:19: 
 hashmap.c | 41 ++++++++++++++++++-----------------------
 1 file changed, 18 insertions(+), 23 deletions(-)
 tests:  5|4
total_score: 30/70
a57490b
ju., 17 de abr. de 2025 23:13:36: 
 tests:  5|4
total_score: 30/70
066140d
ju., 17 de abr. de 2025 23:29:42: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
f22ea87
vi., 18 de abr. de 2025  0:04:40: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
bb90946
vi., 18 de abr. de 2025  0:33:49: 
 hashmap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:140:13: error: 'return' with no value, in function returning non-void [-Werror]
             return;
             ^~~~~~
hashmap.c:128:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key)
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
f1ec339
vi., 18 de abr. de 2025  0:34:21: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
5829261
vi., 18 de abr. de 2025  0:47:58: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  14|1
total_score: 60/70
e1c5c69
